--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,7 +1,11 @@
-<form>
-  <h2> I am @<input type="text" name="handle"> on Twitter. </h2>
+<form action="<%=session_path(@conn, :create)%>" method="post">
+  <input type="hidden" name="_csrf_token" value="<%= get_csrf_token %>">
+  <button type="submit">Sign into Twitter</button>
 </form>
 
+  <h1> I am @<%= IO.inspect Plug.Conn.get_session(@conn, :screen_name) %> on Twitter. </h1>
+
+<form>
 <div class="dropdown">
   <h3> Delete my tweets from
     <select>
@@ -9,7 +13,7 @@
       <option value="3months">Before 3 months ago</option>
       <option value="6months">Before 6 months ago</option>
     </select>
+    <button type="submit">Submit</button>
   </h3>
 </div>
-
-<button type="submit">Submit</button>
+<form>
