--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,19 +1,27 @@
 <form action="<%=session_path(@conn, :create)%>" method="post">
   <input type="hidden" name="_csrf_token" value="<%= get_csrf_token %>">
-  <button type="submit">Sign into Twitter</button>
+  <h1> I am @
+  <%=
+    if (screen_name = Plug.Conn.get_session(@conn, :screen_name)) do
+      screen_name
+    else
+      "__________"
+    end%>
+  on Twitter.
+  <button type="submit">Sign me in</button>
+</h1>
 </form>
 
-  <h1> I am @<%= IO.inspect Plug.Conn.get_session(@conn, :screen_name) %> on Twitter. </h1>
-
-<form>
-<div class="dropdown">
+<form action="<%=tweet_path(@conn, :delete)%>" method="post">
+  <input type="hidden" name="_csrf_token" value="<%= get_csrf_token %>">
   <h3> Delete my tweets from
-    <select>
-      <option value="alltime">All time</option>
-      <option value="3months">Before 3 months ago</option>
-      <option value="6months">Before 6 months ago</option>
-    </select>
-    <button type="submit">Submit</button>
+    <div class="dropdown">
+      <select name="older_than_months">
+        <option value=0>All time</option>
+        <option value=3>Before 3 months ago</option>
+        <option value=6>Before 6 months ago</option>
+      </select>
+    </div>
+    <button type="submit">Go</button>
   </h3>
-</div>
 <form>
