--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,27 +1,34 @@
+<p>
 <form action="<%=session_path(@conn, :create)%>" method="post">
   <input type="hidden" name="_csrf_token" value="<%= get_csrf_token %>">
-  <h1>
-    I am @<%=
-      if (screen_name = Plug.Conn.get_session(@conn, :screen_name)) do
-        screen_name
-      else
-        "__________"
-      end%>
-    on Twitter.
-    <button type="submit">Sign me in</button>
-  </h1>
+    <b>Step 1:</b>
+    I am @<%= current_user_else_default(@conn) %> on Twitter.
+    <%= if current_user?(@conn) do %>
+      ✅
+    <% else %>
+      <button type=submit>Sign in</button>
+    <% end %>
 </form>
 
+<%= if current_user?(@conn) do %>
+<form action="<%=session_path(@conn, :delete)%>" method="post">
+  <input type="hidden" name="_csrf_token" value="<%= get_csrf_token %>">
+  <button type=submit>Sign out</button>
+</form>
+<% end %>
+</p>
+
+<p>
 <form action="<%=tweet_path(@conn, :delete)%>" method="post">
   <input type="hidden" name="_csrf_token" value="<%= get_csrf_token %>">
-  <h3> Delete my tweets from
     <div class="dropdown">
+    <b>Step 2:</b> I want to delete tweets from
       <select name="older_than_months">
         <option value=0>All time</option>
-        <!-- <option value=3>Before 3 months ago</option>
-        <option value=6>Before 6 months ago</option> -->
+        <option value=3>Before 3 months ago</option>
+        <option value=6>Before 6 months ago</option>
       </select>
-    </div>
     <button type="submit">Go</button>
-  </h3>
+    </div>
 <form>
+</p>
