--- a/web/static/css/app.css
+++ b/web/static/css/app.css
@@ -31,6 +31,28 @@ form.link, form.button {
   background-size: 519px 71px;
 }
 
+.step-circle{
+  width:50px;
+  height:50px;
+  border-radius:25px;
+  font-size:20px;
+  color:#fff;
+  line-height:50px;
+  text-align:center;
+  background:#000;
+  float:left;
+}
+
+.step{
+  text-align: justify;
+  border: solid;
+}
+
+.action-button{
+  float: right;
+}
+
+
 /* Everything but the jumbotron gets side spacing for mobile first views */
 .header,
 .marketing {
