--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,4 +1,4 @@
-<h1>delete your tweets</h1>
+<h1><a href="<%=page_path(@conn, :index)%>">delete your tweets</a></h1>
 <br>
 <div class="<%=show_active_or_inactive_div(:one, @step)%>">
 <form action="<%=session_path(@conn, :create)%>" method="post">
