--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -37,3 +37,7 @@
 
 <div class="<%=show_active_or_inactive_div(:three, @step)%>">
  <div class="step-circle">#3</div>All done!</div>
+
+<p class="footer"> Made by <a href=https://franka.tech>Franka</a>.</p>
+<p class="footer"> Find, fork, and contribute to the project on <a href=https://github.com/vsmart/delete-your-tweets>Github</a>.
+</p>
