More info about this project.

--- a/web/templates/page/about.html.eex
+++ b/web/templates/page/about.html.eex
@@ -2,7 +2,15 @@
 <br><br>
 <h2># About this project </h2>
 
-<h3>## Why delete-your-tweets?<h3>
+<h3>## Why delete-your-tweets?</h3>
+
+I like Twitter. But I also like privacy. Deleting old tweets is an easy way to achieve some combination of both. Of course, deleting public tweets does not mean they are completely gone from public record - if you want that, don't tweet in the first place - or keep your Twitter account on private.
+
+<h3>About the app</h3>
+
+This app is built with Elixir and Phoenix, and runs on Heroku. I gave a talk about it once - find the slides <a href=https://franka.tech/talks/ship-it>here</a>.
+
+The code lives on <a href=https://github.com/vsmart/delete-your-tweets>Github</a>.
 
 <h3>## Stats</h3>
 
